Modernize code to Java 25 idioms
- Pattern switch replaces instanceof chain in FileCopier.copy(Spec)
- Pattern variables eliminate redundant casts in SubComparator.isReverseOf and ArchiveUtils.isFileNotFoundError
- Stream.toList() replaces Collectors.toList() where list is not mutated
- Remove now-unused Collectors imports from GameParser and GameFilterer

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>